--- a/css/main.scss
+++ b/css/main.scss
@@ -9,23 +9,22 @@ a{
 
 body{
     font-family: 'Crimson Pro', serif;
+    padding-top: 54px;
 }
 
 $blueDark: #6267d3;
 $blueLight: #a19fe0;
 $pink: #d090d5;
 $black: #222;
-$font: #fff;
 $gray: #8f8f8f;
 $shadowBox: 3px 3px 10px 0 #222;
-
 $line: linear-gradient(270deg,$blueDark,$blueLight,$pink);
 $transition: all 0.3s ease-out;
 
 //all webs
 .navigation{
     $nav : &;
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
     display: flex;
@@ -33,19 +32,11 @@ $transition: all 0.3s ease-out;
     justify-content: space-between;
     z-index: 100;
     transition: all 0.6s ease-out;
-    color: $font;
+    color: #fff;
     width: 100%;
     height: 54px;
-    // opacity: 0;
-    // background: linear-gradient(270deg,#6268d334,#a19fe023,#d090d521);
     background: linear-gradient(270deg,$blueDark,$blueLight,$pink);
 
-    &--addBackground{
-        opacity: 1;
-        background: linear-gradient(270deg,$blueDark,$blueLight,$pink);
-        // background: linear-gradient(90deg,$blueDark,$blueLight,$pink),linear-gradient(1turn,rgba(80,80,195,.301961),hsla(0,0%,100%,.301961));
-        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    }
     &--showList{
         background: $line;
 
@@ -69,32 +60,23 @@ $transition: all 0.3s ease-out;
         display: block;
         padding: 15px 0;
         text-align: center;
-        color: $font;
+        color: #fff;
         text-transform: uppercase;
         font-weight: bold;
         position: relative;
+        letter-spacing: 2px;
     }
     &__hamburger{
         margin: 15px;
         &.close{
             .navigation__hamburgerLine{
-                // transform: rotate(90deg);
-                // transform: translate(40px, -50%);
-
-                // transform: translate(-40px, -50%);
-                // opacity: 0;
                 transform: translateY(-50%) rotate(45deg);
                 &:after{
-                    // transform: translate(-40px, 10px) rotate(-27deg);
-                    // transform: translate(40px, 10px) rotate(45deg);
-                    // opacity: 1;
                     transition: all 0.1s ease-in-out;
                     opacity: 0;
                 }
                 &:before{
                     transform: rotate(90deg) translate(-10px, 0px);
-                    // transform: translate(-40px, -10px) rotate(27deg);
-                    // transform: translate(40px, -10px) rotate(-45deg);
                 }
             }
         }
@@ -110,7 +92,7 @@ $transition: all 0.3s ease-out;
             position: absolute;
             width: 30px;
             height: 3px;
-            background: $font;
+            background: #fff;
             border-radius: 5px;
             top: 50%;
             transform: translateY(-50%);
@@ -120,7 +102,7 @@ $transition: all 0.3s ease-out;
                 position: absolute;
                 width: 30px;
                 height: 3px;
-                background: $font;
+                background: #fff;
                 border-radius: 5px;
                 transition: all 0.3s ease-in-out;
             }
@@ -292,8 +274,7 @@ $transition: all 0.3s ease-out;
         }
     }
     &__link{
-        text-transform: uppercase;
-        font-size: 18px;
+        font-size: 22px;
         padding: 0 15px;
     }
     &__icon{
@@ -314,8 +295,6 @@ $transition: all 0.3s ease-out;
     }
 }
 
-
-
 //others options
 .showHideElement{
     opacity: 0;
@@ -327,7 +306,13 @@ $transition: all 0.3s ease-out;
     }
 }
 
-//logo-----------------------------------------------------
+.fb-share-button{
+    display: block;
+    text-align: center;
+    margin: 20px 0 0px;
+}
+
+//------------------------------------------------logo-------------------------------------------------
 .logoOGV{
     width: 120px;
     height: 120px;
@@ -379,7 +364,7 @@ $transition: all 0.3s ease-out;
     }
 }
 
-//article---site--------------------------------------------
+//---------------------------------------------article-site--------------------------------------------
 .article{
     padding: 30px 15px 30px;
     &__hero{
@@ -387,7 +372,7 @@ $transition: all 0.3s ease-out;
 
         &Img{
             width: 100%;
-            height: 270px;
+            height: 220px;
             box-shadow: $shadowBox;
             &--position{
                 background-position: 0 25% !important;
@@ -410,11 +395,10 @@ $transition: all 0.3s ease-out;
         height: 200px;
         margin: 20px auto;
         box-shadow: $shadowBox;
-        &--top{
-            background-position: 0 25% !important;
-        }
+
         &--vertical{
-            height: 400px;
+            height: 350px;
+            width: 70%;
         }
     }
     &__content{
@@ -467,7 +451,6 @@ $transition: all 0.3s ease-out;
         }
     }
 }
-
 .nextArticles{
     display: flex;
     flex-direction: column;
@@ -478,7 +461,7 @@ $transition: all 0.3s ease-out;
         text-align: center;
         padding: 15px;
         background: $pink;
-        color: $font;
+        color: #fff;
         font-weight: bold;
     }
     &__box{
@@ -563,6 +546,7 @@ $transition: all 0.3s ease-out;
         }
         &__link{
             padding: 20px;
+            font-size: 17px;
             transition: color 0.6s ease-out;
             &:hover{
                 color: $pink;
@@ -680,8 +664,7 @@ $transition: all 0.3s ease-out;
         }
     }
 
-
-    //article-------------------------------------------------
+    //---------------------------------------------article-site--------------------------------------------
     .article{
         width: 1200px;
         margin: 0 auto;
@@ -689,8 +672,8 @@ $transition: all 0.3s ease-out;
             &Img{
                 box-shadow: 3px 3px 10px 0 #222;
                 border-radius: 10px;
-                width: 800px;
-                height: 450px;
+                width: 900px;
+                height: 500px;
                 margin: 50px auto;
             }
         }
@@ -713,10 +696,15 @@ $transition: all 0.3s ease-out;
         &__image{
             width: 1000px;
             margin-bottom: 20px;
-            height: 560px;
+            height: 460px;
             margin: 20px auto;
+            &--bgSpecial{
+                height: 460px !important;
+                background-size: contain !important;
+            }
             &--vertical{
                 height: 900px;
+                width: 700px;
             }
         }
         &__shareBtn{
@@ -727,7 +715,6 @@ $transition: all 0.3s ease-out;
             }
         }
     }
-
     .nextArticles{
         $next: &;
 
