--- a/css/main.scss
+++ b/css/main.scss
@@ -427,6 +427,10 @@ $transition: all 0.3s ease-out;
         font-style: italic;
         display: inline-block;
     }
+    &__green{
+        color: rgb(15, 184, 57);
+        font-weight: bold;
+    }
     &__p{
         margin-bottom: 15px;
     }
@@ -512,6 +516,87 @@ $transition: all 0.3s ease-out;
         font-size: 12px;
     }
 
+}
+
+//--------------------------------------------dish website ------------------------------------------------
+.recipe{
+    display: flex;
+    flex-direction: column;
+    &__top, &__bottom{
+        font-size: 20px;
+        line-height: 30px;
+    }
+    &__bottom{
+        padding: 0px 15px;
+        margin-bottom: 30px;
+    }
+    &__image{
+        &Box{
+            display: flex;
+            flex-direction: column;
+        }
+        width: 100%;
+        height: auto;
+    }
+    &__info{
+        // background: $pink;
+        width: 100%;
+        padding: 15px;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 30px;
+        white-space: nowrap;
+        font-size: 20px;
+        line-height: 20px;
+    }
+    &__kcal{
+        background: $pink;
+        border-radius: 5px;
+        padding: 5px 10px;
+        margin-right: 30px;
+    }
+    &__macro{
+        display: flex;
+        background: $blueDark;
+        border-radius: 5px;
+        padding: 0 5px;
+    }
+    &__ingredient{
+        // background: $blueDark;
+        padding: 5px;
+        &--protein{
+            // color: red;
+        }
+        &--carbohydrates{
+            // color: green;
+        }
+        &--fats{
+            // color: yellow;
+        }
+    }
+    &__dishInfo{
+        padding: 0px 15px;
+    }
+    &__dishName{
+        font-weight: bold;
+        border-bottom: 1px solid $blueDark;
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+        letter-spacing: 2px;
+        font-size: 30px;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    &__title{
+        font-weight: bold;
+        margin-top: 10px;
+    }
+    &__preperTitle{
+        font-weight: bold;
+        margin-top: 10px;
+    }
 }
 
 .fb__btn{
@@ -771,6 +856,19 @@ $transition: all 0.3s ease-out;
     }
     .fb__btn{
         text-align: left;
+    }
+    //--------------------------------------------dish website ------------------------------------------------
+    .recipe{
+        // display: flex;
+        width: 1200px;
+        margin: 0 auto;
+        &__top{
+            display: flex;
+            flex-direction: row;
+        }
+        &__imageBox{
+            order: 1;
+        }
     }
 }
 
