--- a/css/form.scss
+++ b/css/form.scss
@@ -20,22 +20,60 @@ a {
 body {
   font-family: "Crimson Pro", serif;
   padding-top: 54px;
+  background: $line;
 }
 //diet form
 .form {
-  background: #333;
+  background: rgba(41, 41, 41, 0.404);
   color: #fff;
   width: 1000px;
   margin: 20px auto;
   padding: 20px;
-  &Item {
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px #333;
+  &Element {
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    &--baseInfo {
+      input {
+        width: 45% !important;
+      }
+    }
+    // background-color: rgba(51, 51, 51, 0.2);
+    &__title {
+      font-size: 20px;
+      padding-bottom: 10px;
+      text-align: center;
+    }
+    &__answer {
+      // display: flex;
+      // flex-direction: column;
+    }
   }
-  &__title {
-  }
+
   input {
     width: 100%;
     padding: 10px;
-    color: #333;
-    margin: 5px 0;
+    margin: 10px;
+    background: transparent;
+    border: none;
+    color: #fff;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+    font-size: 16px;
+    &::placeholder {
+      /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: #fff;
+      opacity: 0.8; /* Firefox */
+      border: none;
+    }
+    &:focus {
+      border: none;
+      outline: none;
+      background-color: transparent;
+    }
+    &:blur {
+      background-color: pink;
+    }
   }
 }
